Implemented MovieClip and started implementing TilingSprite (works on canvas but not yet webgl). Fixed ordering issues and transparency issues in the webgl renderer. Converted more of the examples to pixi.dart

--- a/examples/example03-MovieClip/index.html
+++ b/examples/example03-MovieClip/index.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-
+<!DOCTYPE HTML>
 <html>
   <head>
-    <title>test</title>
+    <title>pixi.js example 3 using a movieclip</title>
     <style>
       body 
       {
         margin: 0;
         padding: 0;
-        background-color: #fff;
+        background-color: #000000;
       }
     </style>
   </head>
-  
-  <body>  
-    <canvas id="canvas"></canvas>
-    
-    <script type="application/dart" src="test.dart"></script>
+  <body>
+    <script type="application/dart" src="movieclip.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
