Fix transparency example

--- a/example/example07-TransparentBackground/index.html
+++ b/example/example07-TransparentBackground/index.html
@@ -13,8 +13,8 @@
 			width: 400px;
 		}
 	</style>
-	<script src="pixi.js"></script>
-	<script src="../../src/pixi/renderers/WebGLRenderer.js"></script>
+	<script type="application/dart" src="transparent.dart"></script>
+    <script src="packages/browser/dart.js"></script>
 </head>
 <body>
 	<div class="textHolder">Hi there, I'm some HTML text... blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
