--- a/example/bunnybench/index.html
+++ b/example/bunnybench/index.html
@@ -11,6 +11,7 @@
 		
 		<script type="application/dart" src="bunnybench.dart"></script>
 	    <script src="packages/browser/dart.js"></script>
+	    <script src="packages/browser/interop.js"></script>
 	</head>
 	<body>
 	    <a href="http://www.goodboydigital.com/pixi-js-has-landed/">
