--- a/example/example10-Text/index.html
+++ b/example/example10-Text/index.html
@@ -19,5 +19,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
   	<script type="application/dart" src="text.dart"></script>
     <script src="packages/browser/dart.js"></script>
+    <script src="packages/browser/interop.js"></script>
   </body>
 </html>
