Fix to the example to handle the URI properly.

--- a/example/index.html
+++ b/example/index.html
@@ -52,7 +52,7 @@
 		{
 			width: 800px;
 			height: 600px;
-			background: #38404e url('/assets/tile.png') 56px 56px;
+			background: #38404e url('assets/tile.png') 56px 56px;
 		}
 
 
