Updated the JS library but API changes to the interop classes yet to be applied. Ready to be used with Dart v2. Examples now use the build runner.

--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 	<script src="packages/pixi/js/pixi.min.js"></script>
+	<script defer src="example.dart.js"></script>
 
 	<style>
 		body
@@ -117,8 +118,5 @@
 			<h1 id="title"></h1>
 			<canvas id="canvas"></canvas>
 		</div>
-
-		<script type="application/dart" src="index.dart"></script>
-		<script src="packages/browser/dart.js"></script>
 	</body>
 </html>
