Fixed the examples in the readme and the example folder. Improved the description in the package.

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 	<script src="packages/pixi/js/pixi.min.js"></script>
-	<script defer src="example.dart.js"></script>
+	<script defer src="index.dart.js"></script>
 
 	<style>
 		body
@@ -19,17 +19,11 @@
 			min-height: 100vh;
 			font-family: sans-serif;
 			background-color: #272d37;
-
-			/* background: url('assets/pixi_examples_bg.jpg') no-repeat; */
-			/* background-size: 100% 870px; */
 		}
 
 		nav
 		{
-			/* padding: 16px; */
-			/* background-color: rgba(68, 68, 136, 0.9); */
 			background-color: #38404e;
-			/* color: #919bac; */
 			z-index: 1;
 			min-width: 256px;
 		}
